<resources>
    <string name="app_name">实时实地</string>
    <string name="hello">Hello Android, DemoAppActivity!</string>
    <string name="settings">Settings</string>
    <string name="hint_login_username">请输入账号</string>
    <string name="hint_login_password">输入密码</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="please_input_limit_pwd">请输入数字或字母</string>
    <string name="please_input_limit_acc">请输入数字</string>
    <string name="register">注册</string>
    <string name="to_register">注册新用户</string>
    <string name="hint_login_password_confirm">再次输入密码</string>
    <string name="wrong_confirm_pwd">密码不一致</string>
    <string name="empty_password">密码不能为空</string>
    <string name="empty_account">账号不能为空</string>
    <string name="login_fail">登录失败，用户名或密码错误！</string>
    <string name="register_fail">注册失败，用户已存在！</string>
    <string name="login_success">登陆成功</string>
    <string name="login">登录</string>
    <string name="please_input_limt_setitem">只允许输入中文，英文、数字以及下划线</string>
    <string name="nav_recieve">消息</string>
    <string name="nav_discover">发现</string>
    <string name="nav_push">记录</string>
    <string name="nav_account">我的</string>
    <string name="nickname">昵称</string>
    <string name="password">密码</string>
    <string name="set_head_portrait">设置头像</string>
    <string name="photograph">拍照</string>
    <string name="ablum">相册</string>
    <string name="type_public">公开</string>
    <string name="type_secret">私密</string>
    <string name="write_hint">这一刻你的想法...</string>

    <string name="Write_name">发布感慨</string>
    <string name="write_hint_title">标题</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="hot">热点</string>
    <string name="notice">推荐</string>
    <string name="article">简书</string>

</resources>
