<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.yoursecret.Write.WriteActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/write_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:paddingBottom="12dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="4dp"

            android:hint="@string/write_hint_title"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/thought"
            android:layout_width="0dp"

            android:lineSpacingExtra="4sp"
            android:paddingBottom="120dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="4dp"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:gravity="top"
            android:hint="@string/write_hint"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/write_title"
            app:layout_constraintHorizontal_bias="0.0" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/images"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thought"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"></android.support.v7.widget.RecyclerView>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/ic_room_black_24px"
            android:scaleType="centerInside"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/images"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="330dp"
            android:layout_height="30dp"
            android:text="你的位置"
            android:gravity="center|left"
            app:layout_constraintLeft_toRightOf="@+id/imageView"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/images"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:background="@drawable/public_button_background"
            android:layout_marginTop="8dp"
            android:text="@string/type_public"
            android:textColor="@android:color/white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:text="@string/type_public"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/private_button_background"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/white"
            android:text="@string/type_secret"
            app:layout_constraintRight_toLeftOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginEnd="8dp" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>
