<?xml version="1.0" encoding="utf-8"?>
    <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/l_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:clipToPadding="true"
        android:background="@color/color_ffffff"
        android:orientation="vertical">-->
<com.example.administrator.yoursecret.Account.KeyboardLayout
    android:id="@+id/main_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:background="@color/color_ffffff"
    xmlns:android="http://schemas.android.com/apk/res/android">


        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:fillViewport="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:scrollbarThumbVertical="@android:color/transparent"
            android:scrollbars="vertical"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/l_logo"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@null"
                        android:layout_marginTop="50dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_default_user" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="70dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="13dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/ic_mobile_flag" />

                    <EditText
                        android:id="@+id/l_et_mobile"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/hint_login_username"
                        android:inputType="textVisiblePassword"
                        android:maxLength="11"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/color_999999"
                        android:textColorHint="@color/color_999999"
                        android:textSize="14dp" />

                    <ImageView
                        android:id="@+id/l_iv_clean_phone"
                        android:layout_width="40dp"
                        android:layout_height="fill_parent"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_clear"
                        android:visibility="gone" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/color_eeeeee" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="13dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/ic_password_flag" />



                    <EditText
                        android:id="@+id/l_et_password"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/hint_login_password"
                        android:inputType="textPassword"
                        android:maxLength="30"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/color_999999"
                        android:textColorHint="@color/color_999999"
                        android:textSize="14dp" />
                    <ImageView
                        android:id="@+id/l_clean_password"
                        android:layout_width="40dp"
                        android:layout_height="fill_parent"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_clear"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/l_iv_show_pwd"
                        android:layout_width="40dp"
                        android:layout_height="fill_parent"
                        android:scaleType="centerInside"
                        android:src="@drawable/pass_gone" />
                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/color_eeeeee" />

                <Button
                    android:id="@+id/l_btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="21dp"
                    android:background="@drawable/bg_btn_login_selected"
                    android:text="@string/login"
                    android:textColor="@color/color_ffffff"
                    android:textSize="18dp" />



                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="20dp">
                    <Button
                        android:id="@+id/l_btn_to_regist"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="left"
                        android:text="@string/to_register"
                        android:background="@null"
                        android:textColor="@color/color_b0b8b2"
                        android:textSize="14dp" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>
</com.example.administrator.yoursecret.Account.KeyboardLayout>